--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,10 @@
-<% provide(:title, 'Home') %>
-
-<h1>Practice App</h1>
-<p>This is the home page for the Practice App</p>
+<div class="center hero-unit">
+<h1>Welcome to the Sample App</h1>
+<h2>
+This is the home page for the
+<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+sample application.
+</h2>
+<%= link to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+<%= link to image tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
